2 этап(iter 59)